Added new stuff from the other repository. Added project structure. Added models. Added controllers.

--- a/Aulas/Aulas/Aulas.csproj
+++ b/Aulas/Aulas/Aulas.csproj
@@ -43,11 +43,23 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Controllers\ArtigoController.cs" />
+    <Compile Include="Controllers\OrcamentoController.cs" />
+    <Compile Include="Controllers\PlataformaController.cs" />
+    <Compile Include="Models\Artigo.cs" />
+    <Compile Include="Models\Menu.cs" />
+    <Compile Include="Models\Orcamento.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CalculadorIva\CalculadorIva.csproj">
+      <Project>{896618f1-7700-412b-adf4-85b57f07accb}</Project>
+      <Name>CalculadorIva</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
